syntax = "proto3";

option java_package = "io.grpc.examples.routeguide";

package routeguide;

service RouteGuide {
    rpc GetFeature (Point) returns (Feature) {
    }
    rpc ListFeature (Rectangle) returns (stream Feature) {
    }
    rpc RecordRoute (stream Point) returns (RouteSummary) {
    }
    rpc RouteChat (stream RouteNote) returns (stream RouteNote) {
    }
}

/**
 * This is a leading comment for a message
*/
message Point {
    int32 latitude = 1; // the default value
    int32 longitude = 2; // the other value
}

message Rectangle {
    // this is another leading comment
    Point lo = 1;
    // this is another leading comment
    Point hi = 2;
}

/**
 * @exclude
 * This comment won't be rendered
 */
message Feature {
    /* @exclude the value of this message. */
    string name = 1; // the id of this message.
    /* @exclude the value of this message. */
    Point location = 2; // @exclude the name of this message
}

message RouteNote {
    Point location = 1;
    string message = 2;
}

message RouteSummary {
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3;
    int32 elapsed_time = 4;
}

// Not used in the RPC.  Instead, this is here for the form serialized to disk.
message FeatureDatabase {
    repeated Feature feature = 1;
}

